# UFS2ARCO-archive

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  environment.yaml  gefsv13_replay_variable_list.xlsx  pyproject.toml  setup.cfg  setup.cfg.del  setup.py
.github/workflows/: python-app.yml
docs/: UFS2ARCO.rst  api.rst  conf.py  index.rst  make.bat  modules.rst  read_and_store_ocean.ipynb  read_and_store_replay.ipynb
docs/_static/: readme.rst
scripts/: config-replay.yaml  read_from_s3.py  read_local.py
src/: ufs2arco_conda_env.yml
src/UFS2ARCO/: __init__.py  fv3dataset.py  mom6.py  replay_to_zarr_example.py  skeleton.py  ufsdataset.py
src/era5_vs_gefvs13/: __init__.py  skeleton.py
test_files/: s3_source_amsua_first_pass.yaml
tests/: conftest.py  test_skeleton.py
